# otus-01-tdd

./: CMakeLists.txt  QuadraticEquation.cpp  QuadraticEquation.h  README.md
.github/workflow/: c-cpp.yml
tests/: QuadraticEquation_test.cpp  main.cpp
